--- a/入门一/任务一.html
+++ b/入门一/任务一.html
@@ -5,9 +5,56 @@
     <title>任务一</title>
 </head>
 <body>
-<h1>标题</h1>
-<p>段落</p>
-<a href="http://ife.baidu.com/note/detail/id/79" target="_blank">链接</a>
-<img src="images/logo_a3b4064.png">
+<h1>h1标题</h1>
+<h2>h2标题</h2>
+<h3>h3标题</h3>
+<h4>h4标题</h4>
+<h5>h5标题</h5>
+<h6>h6标题</h6>
+<p>p段落</p>
+<a href="http://ife.baidu.com/note/detail/id/79" target="_blank">a链接</a>
+<p><img src="images/logo_a3b4064.png"></p>
+<ul>
+    <li>无序A</li>
+    <li>无序B</li>
+    <li>无序C</li>
+</ul>
+<ol>
+    <li>有序1</li>
+    <li>有序2</li>
+    <li>有序3</li>
+</ol>
+<table>
+    <tbody>
+    <tr>
+        <th>标题1</th>
+        <th>标题2</th>
+        <th>标题3</th>
+    </tr>
+    <tr>
+        <td>表格内容</td>
+        <td>表格内容</td>
+        <td>表格内容</td>
+    </tr>
+    <tr>
+        <td>表格内容</td>
+        <td>表格内容</td>
+        <td>表格内容</td>
+    </tr>
+    <tr>
+        <td>表格内容</td>
+        <td>表格内容</td>
+        <td>表格内容</td>
+    </tr>
+    </tbody>
+</table>
+<p>文本输入框：<input type="text" placeholder="输入文本"></p>
+<p>密码输入框：<input type="password" placeholder="Input Your Password"></p>
+<p>单选框：<input type="radio" name="radio" value="a">A <input type="radio" name="radio" value="b">B <input type="radio" name="radio" value="c">C</p>
+<p>多选框：<input type="checkbox" name="checkbox" value="a">A <input type="checkbox" name="checkbox" value="b">B <input type="checkbox" name="checkbox" value="c">C</p>
+<p>下拉列表：<select><option>A</option><option>B</option><option>C</option></select></p>
+<p>多行输入框：<textarea placeholder="多行输入"></textarea></p>
+<p>按钮：<input type="submit" value="提交"></p>
+<p>按钮：<input type="button" value="按钮"></p>
 </body>
 </html>
