--- a/ECharts & WebVR学院/ECharts NO.2 - 实现自定义的统计图表/index.html
+++ b/ECharts & WebVR学院/ECharts NO.2 - 实现自定义的统计图表/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="js/echarts.js"></script>
     <title>ECharts NO.2 - 实现自定义的统计图表</title>
 </head>
 <body>
-
+<div id="main" style="width: 800px;height: 600px;margin: 0 auto;padding-top: 2%;"></div>
+<script type="text/javascript">
+    var myChart = echarts.init(document.getElementById('main'));
+    var option = {
+        title: [{text: '图表示例'},{subtext:'变换样式'}],
+        tooltip: {},
+        legend: {data: ['柱形单位','折线单位']},
+        xAxis: {data: ['项目一', '项目二', '项目三', '项目四', '项目五', '项目六', '项目七']},
+        yAxis: [{type:'value',name:'标尺一',inverse:true,min:0,max:100,interval:10,axisLabel:{formatter:'{value}m'}},{type:'value',name:'标尺二',inverse:true,min:0,max:50,interval:10,axisLabel:{formatter:'{value}min'}}],
+        series: [{name: '柱形单位', type: 'bar',itemStyle:{normal:{color:'#243499'}}, data: [4,6,21,23,14,32,9]},{name: '折线单位', type: 'line',itemStyle:{normal:{color:'#B24995'}}, yAxisIndex:1,data: [4,6,21,23,14,32,9]}]
+    };
+    myChart.setOption(option);
+</script>
 </body>
 </html>
