--- a/ECharts & WebVR学院/ECharts NO.2 - 实现自定义的统计图表/index.html
+++ b/ECharts & WebVR学院/ECharts NO.2 - 实现自定义的统计图表/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <script src="js/echarts.js"></script>
     <title>ECharts NO.2 - 实现自定义的统计图表</title>
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
 <div id="main" style="width: 800px;height: 600px;margin: 0 auto;padding-top: 2%;"></div>
