--- a/ECharts & WebVR学院/ECharts NO.2 - 实现自定义的统计图表/index.html
+++ b/ECharts & WebVR学院/ECharts NO.2 - 实现自定义的统计图表/index.html
@@ -112,7 +112,17 @@
             yAxisIndex: 1,
             data: [4, 6, 21, 23, 14, 32, 9, 6, 12, 15],
             barGap: 0
-        }]
+        }],
+        graphic:{
+            type:'text',
+            style:{
+                text:'Sources:World Bank;Census Bureau;EIU',
+                font:'20px sans-serif',
+                fill:'#aaaaaa'
+            },
+            bottom:15,
+            left:80
+        }
     };
     myChart.setOption(option);
 </script>
