--- a/小薇学院/任务一：零基础HTML编码/index.html
+++ b/小薇学院/任务一：零基础HTML编码/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>任务一</title>
+    <title>任务一：零基础HTML编码</title>
 </head>
 <body>
 <h1>h1标题</h1>
