--- a/斌斌学院/任务一：零基础JavaScript编码（一）/index.html
+++ b/斌斌学院/任务一：零基础JavaScript编码（一）/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>任务一：零基础JavaScript编码（一）</title>
 </head>
 <body>
+<label>请输入北京今天空气质量：<input id="aqi-input" type="text"></label>
+<button id="button" onclick="airQuality()">确认填写</button>
 
+<div>您输入的值是：<span id="aqi-display">尚无录入</span></div>
+
+<script type="text/javascript">
+
+    function airQuality() {
+        /*
+         在注释下方写下代码
+         给按钮button绑定一个点击事件
+         在事件处理函数中
+         获取aqi-input输入的值，并显示在aqi-display中
+         */
+        var a = document.getElementById("aqi-display");
+        var b = document.getElementById("aqi-input");
+        if (b.value != "") {
+            a.innerHTML = b.value;
+        } else {
+            a.innerHTML = "尚无录入";
+        }
+    }
+
+</script>
 </body>
 </html>
