--- a/JavaScript/Task_2/index.html
+++ b/JavaScript/Task_2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>任务一：零基础JavaScript编码（一）</title>
+    <title>任务二：零基础JavaScript编码（二）</title>
 </head>
 <body>
 
